--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <body>
     <div id="app">
       <!-- Gestione nuova Task -->
+      <img src="boolean-logo.png" alt="logo boolean" />
       <div class="new-task">
         <input
           type="text"
